src/scss/40-components/_navigation-main.scss
$navigation-count: 7;

@mixin nav-primary--item {
  font-family: font(surveyor);
  font-weight: 200;
  font-size: fontsize-rem(ms(0));
  text-transform: uppercase;
  letter-spacing: 0.5em;
  @include breakpoint($bp--navigation--wide) {
    font-size: fontsize-rem(ms(1));
  }
  @include breakpoint($bp--navigation--fully-wide) {
    letter-spacing: 1em;
  }
}


.nav-primary {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  @include breakpoint($bp--navigation--wide) {
    position: relative;
    top: -1em;
  }
  .nav-item {}
  .site-header & {}
}

.nav-primary-trigger--label {
  @include nav-primary--item();
  @include icon(menu, $text-replace: true);
  margin: 0;
  letter-spacing: 0;
}

.site-header {
  @include margin-compensation();
  @include breakpoint($bp--navigation--wide) {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-top: 1.5em;
    margin-bottom: 5em;
    min-width: 40em;
    border-bottom: 0.25em double currentColor;
    padding-bottom: 5em;
    padding-left: $side-margin--wide;
  }
  @include breakpoint(870px) {
    padding-left: 15%;
  }
  @include breakpoint(1100px) {
    justify-content: center;
    padding-left: 0;
    .button-logo {
      margin-left: -7em;
    }
  }
  .button-logo {
    z-index: 1;
  }
}

.nav-primary--fan {
  @include nav-primary--item();
  @include breakpoint($bp--navigation--narrow) {
    text-align: right;
    padding-top: 0;
    padding-right: 0.5em;
    padding-bottom: 0;
    padding-left: 0.5em;
    font-weight: 800;
    max-height: 0;
    overflow: hidden;
    opacity: 0;
    transition-property: max-height, padding, opacity;
    transition-duration: 0.3s;
    transition-timing-function: ease-in-out;
    &:nth-of-type(1) {
      color: color(white);
      margin-top: -2.5em;
      z-index: 1;
      max-height: 10em;
      padding-top: 0.5em;
      padding-bottom: 0.5em;
      opacity: 1;
    }
    &:nth-of-type(1n+2) {
      border-bottom: 2px solid color(gray, light);
      margin-right: -0.5em;
    }
    a {
      @include unset-background-links();
      display: block;
    }
    #nav-primary-trigger:checked ~ & {
      max-height: 10em;
      padding-top: 0.5em;
      padding-bottom: 0.5em;
      opacity: 1;
    }
  }
  @include breakpoint($bp--navigation--wide) {
    position: absolute;
    list-style-type: none;
    margin-left: -9em;
    padding-left: 10em;
    transform-origin: 0 50%;
    transform: rotate(0deg);
    transition-property: transform, opacity;
    transition-duration: 0.3s;
    transition-timing-function: ease-in-out;
    &:nth-of-type(1n + 2) {
      opacity: 0;
    }
    @for $i from 1 through $navigation-count {
      &:nth-of-type(#{$i}) {
        z-index: $navigation-count - $i;
      }
    }
    #nav-primary-trigger:checked ~ & {
      @include fan-items(
        $num-items: $navigation-count,
        $angle-span: 65deg,
        $angle-offset: -40deg
      );
      opacity: 1;
    }
  }
}

#nav-primary-trigger {
  @include visuallyhidden();
}

